himanshu branch merged

--- a/gunicorn/gunicorn.service
+++ b/gunicorn/gunicorn.service
@@ -6,7 +6,7 @@ After=network.target
 User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/nimbo-server
-ExecStart=/home/ubuntu/env/bin/gunicorn --access-logfile - --workers 3 --bind unix:/home/ubuntu/nimbo-server/blog/blog.sock blog.wsgi:application
+ExecStart=/home/ubuntu/env/bin/gunicorn --access-logfile - --workers 3 --bind unix:/home/ubuntu/nimbo-server/nimboprojects/nimboproject.sock nimboproject.wsgi:application
 
        
 [Install]
