himanshu branch merged

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,19 @@
-
 server {
     listen 80 default_server;
-    server_name 184.72.78.226;
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location /staticfiles/ {
-        root /home/ubuntu/nimbo-server;
+    server_name 184.72.78.226;  # Replace with your domain name if available
+
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
     }
+
+    location /staticfiles/ {
+        alias /home/ubuntu/nimbo-server/staticfiles/;
+        # Ensure trailing slash is present in alias path
+        # Example: alias /home/ubuntu/nimbo-server/staticfiles/;
+        # Do not use 'root' here as 'alias' is more appropriate for serving static files
+    }
+
     location / {
         include proxy_params;
         proxy_pass http://unix:/run/gunicorn.sock;
